pkg/check/testdata/ub/types/valid/root-inputs.ub
factory: {
  inputs: { path: { type: integer } }
  resources: {
    file: local.file {
      path: var.path
      content: 'x'
    }
  }
}
