pkg/check/testdata/ub/types/invalid/root-inputs.ub
factory: {
  inputs: { path: { type: integer } }
  resources: {
    file: local.file {
      path: input.path
      content: 'x'
    }
  }
}
